--- a/gallery/experiments/index.html
+++ b/gallery/experiments/index.html
@@ -77,7 +77,7 @@
      <a href="/gallery/experiments/selfportraiture/">
       <img src="/img/gallery/selfportraiture/selfportraiture06.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Self Portraiture</h2>
+       <h2 style="font-size:30px;font-weight:500;">Self Portraiture</h2>
        <p>Part of an art project in early 2020 exploring ways to create self portraits digitally.</p>
        <hr>
        </div>
@@ -88,7 +88,7 @@
      <a href="/gallery/experiments/lowres/">
       <img src="/img/gallery/lowres/lowres01.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Low Resolution</h2>
+       <h2 style="font-size:30px;font-weight:500;">Low Resolution</h2>
        <p>Short series of photos with extremely small resolutions.</p>
        <hr>
        </div>
@@ -99,7 +99,7 @@
      <a href="/gallery/experiments/light/">
       <img src="/img/gallery/light/light02.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Light Experiments</h2>
+       <h2 style="font-size:30px;font-weight:500;">Light Experiments</h2>
        <p>Different experiments manipulating or utilising light.</p>
        <hr>
        </div>
