--- a/gallery/index.html
+++ b/gallery/index.html
@@ -77,7 +77,7 @@
      <a href="/gallery/digicam/sunsets/">
       <img src="/img/gallery/digicam/digicam01.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Digicam</h2>
+       <h2 style="font-size:30px;font-weight:500;">Digicam</h2>
        <p>Photos taken using my Sony DSC-S85 &#39;Digicam&#39;.</p>
        <hr>
        </div>
@@ -88,7 +88,7 @@
      <a href="/gallery/trichrome/">
       <img src="/img/gallery/trichrome/summer/summer01.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Trichrome</h2>
+       <h2 style="font-size:30px;font-weight:500;">Trichrome</h2>
        <p>Collection of my photographic works and techniques.</p>
        <hr>
        </div>
@@ -99,7 +99,7 @@
      <a href="/gallery/places/">
       <img src="/img/gallery/places/loughderg03.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Places</h2>
+       <h2 style="font-size:30px;font-weight:500;">Places</h2>
        <p>Photos taken in places of note, or places I enjoy being at.</p>
        <hr>
        </div>
@@ -110,7 +110,7 @@
      <a href="/gallery/experiments/">
       <img src="/img/gallery/light/light03.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Experiments</h2>
+       <h2 style="font-size:30px;font-weight:500;">Experiments</h2>
        <p>Small collection of various experiments with light and photographic techniques.</p>
        <hr>
        </div>
