--- a/gallery/places/index.html
+++ b/gallery/places/index.html
@@ -77,7 +77,7 @@
      <a href="/gallery/places/westport/">
       <img src="/img/gallery/places/westport06.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Westport</h2>
+       <h2 style="font-size:30px;font-weight:500;">Westport</h2>
        <p>Photos taken in and around Westport.</p>
        <hr>
        </div>
@@ -88,7 +88,7 @@
      <a href="/gallery/places/loughderg/">
       <img src="/img/gallery/places/loughderg01.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Lough Derg</h2>
+       <h2 style="font-size:30px;font-weight:500;">Lough Derg</h2>
        <p>Trichrome photos taken in the idyllic Lough Derg.</p>
        <hr>
        </div>
