--- a/gallery/trichrome/index.html
+++ b/gallery/trichrome/index.html
@@ -77,7 +77,7 @@
      <a href="/gallery/trichrome/vivid_flowers/">
       <img src="/img/gallery/trichrome/vivid/vivid03.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Vivid Flowers</h2>
+       <h2 style="font-size:30px;font-weight:500;">Vivid Flowers</h2>
        <p>Various Trichrome photos of colourful, vivid flowers.</p>
        <hr>
        </div>
@@ -88,7 +88,7 @@
      <a href="/gallery/trichrome/lockdown/">
       <img src="/img/gallery/trichrome/lockdown/lockdown05.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Lockdown</h2>
+       <h2 style="font-size:30px;font-weight:500;">Lockdown</h2>
        <p>Short collection of photos detailing the 2020 lockdown.</p>
        <hr>
        </div>
@@ -99,7 +99,7 @@
      <a href="/gallery/trichrome/spring/">
       <img src="/img/gallery/trichrome/spring/spring05.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Spring</h2>
+       <h2 style="font-size:30px;font-weight:500;">Spring</h2>
        <p>Spring photos in the Seasons series of Trichrome photos.</p>
        <hr>
        </div>
@@ -110,7 +110,7 @@
      <a href="/gallery/trichrome/winter/">
       <img src="/img/gallery/trichrome/winter/winter01.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Winter</h2>
+       <h2 style="font-size:30px;font-weight:500;">Winter</h2>
        <p>Winter photos in the Seasons series of Trichrome photos.</p>
        <hr>
        </div>
@@ -121,7 +121,7 @@
      <a href="/gallery/trichrome/autumn/">
       <img src="/img/gallery/trichrome/autumn/autumn03.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Autumn</h2>
+       <h2 style="font-size:30px;font-weight:500;">Autumn</h2>
        <p>Autumn photos in the Seasons series of Trichrome photos.</p>
        <hr>
        </div>
@@ -132,7 +132,7 @@
      <a href="/gallery/trichrome/summer/">
       <img src="/img/gallery/trichrome/summer/summer01.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Summer</h2>
+       <h2 style="font-size:30px;font-weight:500;">Summer</h2>
        <p>Summer photos in the Seasons series of Trichrome photos.</p>
        <hr>
        </div>
