--- a/journal/index.html
+++ b/journal/index.html
@@ -73,7 +73,7 @@
    <ul>
   
      <li>
-     <a href="/journal/year-review-2022/">
+     <a style="font-size:26px;font-weight:500;" href="/journal/year-review-2022/">
       Year Review 2022
      <p style="margin-bottom: 10px;">Breaking down 2022, my favourite things and projects completed.</p>
      <hr>
@@ -81,7 +81,7 @@
      </li>
    
      <li>
-     <a href="/journal/leaving-spotify/">
+     <a style="font-size:26px;font-weight:500;" href="/journal/leaving-spotify/">
       Leaving Spotify for Freer Pastures
      <p style="margin-bottom: 10px;">How and why I&#39;m moving my listening activities away from streaming platforms.</p>
      <hr>
@@ -89,7 +89,7 @@
      </li>
    
      <li>
-     <a href="/journal/web-optimisations/">
+     <a style="font-size:26px;font-weight:500;" href="/journal/web-optimisations/">
       Extreme Web Optimizations, without Compromising Style
      <p style="margin-bottom: 10px;">A tear-down of the web optimizations I developed while putting this site together.</p>
      <hr>
@@ -97,7 +97,7 @@
      </li>
    
      <li>
-     <a href="/journal/year-review-2021/">
+     <a style="font-size:26px;font-weight:500;" href="/journal/year-review-2021/">
       Year Review 2021
      <p style="margin-bottom: 10px;">A breakdown review of how my year went, and my goals for next year.</p>
      <hr>
