--- a/knowledge/ipod_modding/index.html
+++ b/knowledge/ipod_modding/index.html
@@ -77,7 +77,7 @@
      <a href="/knowledge/ipod_modding/rockbox_theming/">
       <img src="/img/knowledge/ipod_modding/rockbox_theming.svg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Rockbox Theming</h2>
+       <h2 style="font-size:30px;font-weight:500;">Rockbox Theming</h2>
        <p>An introduction to more advanced applications of the rockbox theming language.</p>
        <hr>
        </div>
@@ -88,7 +88,7 @@
      <a href="/knowledge/ipod_modding/font_combining/">
       <img src="/img/knowledge/ipod_modding/fonts01.svg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Font Combining</h2>
+       <h2 style="font-size:30px;font-weight:500;">Font Combining</h2>
        <p>A guide to combing 2 or more fonts into one using Fontforge.</p>
        <hr>
        </div>
