--- a/knowledge/linux/index.html
+++ b/knowledge/linux/index.html
@@ -77,7 +77,7 @@
      <a href="/knowledge/linux/pdf/">
       <img src="/img/knowledge/linux/pdf.svg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">PDF Utilities</h2>
+       <h2 style="font-size:30px;font-weight:500;">PDF Utilities</h2>
        <p>How to create, combine, add indexes, pull and add pages and more with PDFs in the Terminal</p>
        <hr>
        </div>
@@ -88,7 +88,7 @@
      <a href="/knowledge/linux/sftp/">
       <img src="/img/knowledge/linux/sftp.svg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">SFTP &amp; SSH</h2>
+       <h2 style="font-size:30px;font-weight:500;">SFTP &amp; SSH</h2>
        <p>How to use SFTP to transfer files &amp; SSH to connect to devices.</p>
        <hr>
        </div>
@@ -99,7 +99,7 @@
      <a href="/knowledge/linux/imagemagick/">
       <img src="/img/knowledge/linux/imagemagick.svg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">ImageMagick</h2>
+       <h2 style="font-size:30px;font-weight:500;">ImageMagick</h2>
        <p>Explaining Commands and various tricks for the image editing tool.</p>
        <hr>
        </div>
