--- a/projects/design/index.html
+++ b/projects/design/index.html
@@ -77,7 +77,7 @@
      <a href="/projects/design/virtual-gallery/">
       <img src="/img/projects/virtual_gallery_1.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Virtual Gallery</h2>
+       <h2 style="font-size:30px;font-weight:500;">Virtual Gallery</h2>
        <p>An online art exhibition that I hosted in the summer of 2020.</p>
        <hr>
        </div>
@@ -88,7 +88,7 @@
      <a href="/projects/design/origami-designs/">
       <img src="/img/projects/origami_designs_1.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Origami Designs</h2>
+       <h2 style="font-size:30px;font-weight:500;">Origami Designs</h2>
        <p>My own origami creations that I have come up with over the years.</p>
        <hr>
        </div>
@@ -99,7 +99,7 @@
      <a href="/projects/design/famicase/">
       <img src="/img/projects/famicase_1.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Famicase Exhibition</h2>
+       <h2 style="font-size:30px;font-weight:500;">Famicase Exhibition</h2>
        <p>My entries to the annual Famicase exhibition hosted by Super Meteor.</p>
        <hr>
        </div>
