--- a/projects/games/index.html
+++ b/projects/games/index.html
@@ -77,7 +77,7 @@
      <a href="/projects/games/streetwalker/">
       <img src="/img/projects/streetwalker_1.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Streetwalker</h2>
+       <h2 style="font-size:30px;font-weight:500;">Streetwalker</h2>
        <p>A minimalist walking sim which was my first foray into programming.</p>
        <hr>
        </div>
@@ -88,7 +88,7 @@
      <a href="/projects/games/gamejams/">
       <img src="/img/projects/gamejam_2.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Gamejams</h2>
+       <h2 style="font-size:30px;font-weight:500;">Gamejams</h2>
        <p>A collection of entries into various different gamejams.</p>
        <hr>
        </div>
