--- a/projects/pebble/index.html
+++ b/projects/pebble/index.html
@@ -77,7 +77,7 @@
      <a href="/projects/pebble/timetwistpop/">
       <img src="/img/projects/timetwistpop02.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Time Twist Pop</h2>
+       <h2 style="font-size:30px;font-weight:500;">Time Twist Pop</h2>
        <p>A simple, vibrant watchface for the colour models of the Pebble watch family.</p>
        <hr>
        </div>
@@ -88,7 +88,7 @@
      <a href="/projects/pebble/rebble_weather/">
       <img src="/img/projects/rebbleweather04.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Rebble Weather Icons</h2>
+       <h2 style="font-size:30px;font-weight:500;">Rebble Weather Icons</h2>
        <p>Reimagining the Pebble weather icons for use in future projects.</p>
        <hr>
        </div>
