--- a/knowledge/index.html
+++ b/knowledge/index.html
@@ -77,7 +77,7 @@
      <a href="/knowledge/websites/">
       <img src="/img/knowledge/websites/websites.svg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Websites Wiki</h2>
+       <h2 style="font-size:30px;font-weight:500;">Websites Wiki</h2>
        <p>Information on making simple websites from scratch. From the basics to site generation.</p>
        <hr>
        </div>
@@ -88,7 +88,7 @@
      <a href="/knowledge/linux/">
       <img src="/img/knowledge/linux/linux.svg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Linux Wiki</h2>
+       <h2 style="font-size:30px;font-weight:500;">Linux Wiki</h2>
        <p>Guides to various linux command line tools and other useful information.</p>
        <hr>
        </div>
@@ -99,7 +99,7 @@
      <a href="/knowledge/font_modifying/">
       <img src="/img/knowledge/icons/fonts_01.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Modifying Fonts</h2>
+       <h2 style="font-size:30px;font-weight:500;">Modifying Fonts</h2>
        <p>Tips on modifying, tweaking and combining fonts in FontForge to reduce filesizes.</p>
        <hr>
        </div>
@@ -110,7 +110,7 @@
      <a href="/knowledge/pico8-games/">
       <img src="/img/knowledge/icons/pico8.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Pico-8 Games List</h2>
+       <h2 style="font-size:30px;font-weight:500;">Pico-8 Games List</h2>
        <p>An extensive list of the best (and my favourite) games for the Pico-8 system.</p>
        <hr>
        </div>
@@ -121,7 +121,7 @@
      <a href="/knowledge/seedharvesting/">
       <img src="/img/knowledge/icons/savingseeds01.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Seed Harvesting</h2>
+       <h2 style="font-size:30px;font-weight:500;">Seed Harvesting</h2>
        <p>A record of harvesting seeds, when to pick and how I store them.</p>
        <hr>
        </div>
@@ -132,7 +132,7 @@
      <a href="/knowledge/bees/">
       <img src="/img/knowledge/icons/bees05.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Bee Encyclopedia</h2>
+       <h2 style="font-size:30px;font-weight:500;">Bee Encyclopedia</h2>
        <p>An Encyclopedia of various Bees I&#39;ve spotted, and photographed.</p>
        <hr>
        </div>
@@ -143,7 +143,7 @@
      <a href="/knowledge/ipod_modding/">
       <img src="/img/knowledge/ipod_modding/ipod.svg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">iPod Modding</h2>
+       <h2 style="font-size:30px;font-weight:500;">iPod Modding</h2>
        <p>Collection of various guides and information on iPod software and hardware Modding</p>
        <hr>
        </div>
@@ -154,7 +154,7 @@
      <a href="/knowledge/reusingtech/">
       <img src="/img/knowledge/icons/reusingtech02.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Reusing Technology</h2>
+       <h2 style="font-size:30px;font-weight:500;">Reusing Technology</h2>
        <p>Tips and Tricks about reusing technology in fun and useful ways.</p>
        <hr>
        </div>
@@ -165,7 +165,7 @@
      <a href="/knowledge/ecovillage/">
       <img src="/img/knowledge/icons/ecovillage06.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Ecovillages</h2>
+       <h2 style="font-size:30px;font-weight:500;">Ecovillages</h2>
        <p>Record of my visit around Cloughjordan Ecovillage.</p>
        <hr>
        </div>
@@ -176,7 +176,7 @@
      <a href="/knowledge/origami/">
       <img src="/img/knowledge/icons/origami_3.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Origami</h2>
+       <h2 style="font-size:30px;font-weight:500;">Origami</h2>
        <p>The art of folding paper into various forms and objects.</p>
        <hr>
        </div>
@@ -187,7 +187,7 @@
      <a href="/knowledge/trichrome/">
       <img src="/img/knowledge/icons/trichrome.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Trichrome Technique</h2>
+       <h2 style="font-size:30px;font-weight:500;">Trichrome Technique</h2>
        <p>Detailed write-up on the Trichrome technique used to make colour images.</p>
        <hr>
        </div>
@@ -198,7 +198,7 @@
      <a href="/knowledge/beachfossils/">
       <img src="/img/knowledge/icons/beachfossils_2.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Beach Fossils</h2>
+       <h2 style="font-size:30px;font-weight:500;">Beach Fossils</h2>
        <p>Information on the kinds of fossils that can be found on Beaches.</p>
        <hr>
        </div>
