--- a/projects/index.html
+++ b/projects/index.html
@@ -77,7 +77,7 @@
      <a href="/projects/pebble/timetwistpop/">
       <img src="/img/projects/timetwistpop02.jpg" loading="lazy">
       <div>
-       <h2 style="font-size:28px">Time Twist Pop</h2>
+       <h2 style="font-size:30px;font-weight:500;">Time Twist Pop</h2>
        <p>A simple, vibrant watchface for the colour models of the Pebble watch family.</p>
        <hr>
        </div>
@@ -87,7 +87,7 @@
      <a href="/projects/ipod/adwaitapod/">
       <img src="/img/projects/adwaitapod01.jpg" loading="lazy">
       <div>
-       <h2 style="font-size:28px">adwaitapod</h2>
+       <h2 style="font-size:30px;font-weight:500;">adwaitapod</h2>
        <p>A modern, feature-rich theme for rockbox on iPod Video models.</p>
        <hr>
        </div>
@@ -97,7 +97,7 @@
      <a href="/projects/pebble/rebble_weather/">
       <img src="/img/projects/rebbleweather04.jpg" loading="lazy">
       <div>
-       <h2 style="font-size:28px">Rebble Weather Icons</h2>
+       <h2 style="font-size:30px;font-weight:500;">Rebble Weather Icons</h2>
        <p>Reimagining the Pebble weather icons for use in future projects.</p>
        <hr>
        </div>
@@ -107,7 +107,7 @@
      <a href="/projects/design/origami-designs/">
       <img src="/img/projects/origami_designs_1.jpg" loading="lazy">
       <div>
-       <h2 style="font-size:28px">Origami Designs</h2>
+       <h2 style="font-size:30px;font-weight:500;">Origami Designs</h2>
        <p>My own origami creations that I have come up with over the years.</p>
        <hr>
        </div>
@@ -125,7 +125,7 @@
      <a href="/projects/ipod/">
       <img src="/img/projects/icons/ipod.svg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">IPod Projects</h2>
+       <h2 style="font-size:30px;font-weight:500;">IPod Projects</h2>
        <p>iPod themes and various work done for Rockbox theming.</p>
        <hr>
        </div>
@@ -136,7 +136,7 @@
      <a href="/projects/pebble/">
       <img src="/img/projects/icons/pebble.svg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Pebble Projects</h2>
+       <h2 style="font-size:30px;font-weight:500;">Pebble Projects</h2>
        <p>Projects for the Pebble platform of smartwatches and the Rebble group.</p>
        <hr>
        </div>
@@ -147,7 +147,7 @@
      <a href="/projects/games/">
       <img src="/img/projects/icons/games.svg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Games Projects</h2>
+       <h2 style="font-size:30px;font-weight:500;">Games Projects</h2>
        <p>Collection of game projects and stuff from game jams over the years.</p>
        <hr>
        </div>
@@ -158,7 +158,7 @@
      <a href="/projects/design/">
       <img src="/img/projects/icons/design.svg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Design Projects</h2>
+       <h2 style="font-size:30px;font-weight:500;">Design Projects</h2>
        <p>Miscellaneous design projects, from Origami to Web Design.</p>
        <hr>
        </div>
