--- a/projects/ipod/index.html
+++ b/projects/ipod/index.html
@@ -77,7 +77,7 @@
      <a href="/projects/ipod/adwaitapod/">
       <img src="/img/projects/adwaitapod01.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">adwaitapod</h2>
+       <h2 style="font-size:30px;font-weight:500;">adwaitapod</h2>
        <p>A modern, feature-rich theme for rockbox on iPod Video models.</p>
        <hr>
        </div>
