--- a/about/now/index.html
+++ b/about/now/index.html
@@ -73,9 +73,9 @@
 
 
 <ul class="extra">
-<li>∘ Get back to work on Themify Rockbox theme.</li>
+<li>∘ Working on my new iPod theme, Themify.</li>
 
-<li>∘ Continue finishing Rockbox Modding Book.</li>
+<li>∘ Rethink my Rockbox Theming Book.</li>
 
 <li>∘ Upgrade home network to newer hardware.</li>
 </ul>
@@ -88,7 +88,7 @@
 
 <li>∘ Listening to Valentine by Snail Mail.
 
-<li>∘ Listening to Afro-Harping by Dorothy Ashby.
+<li>∘ Listening to American Love Call by Duran Jones & The Indications.
 
 </ul>
 
