--- a/knowledge/bees/index.html
+++ b/knowledge/bees/index.html
@@ -106,7 +106,7 @@
      <hr>
  	</div>
  </figure>
-<p>  This solitary bee measures at just around 15mm in length and is one of the earliest bees in the garden each <a href="http://localhost:1313/gallery/trichrome/spring/" target="_blank" rel="noopener">Spring</a>. They are relatively common, and are easily identified by two the two grey, or ashy, bands of colour on their Thorax. They nest in the ground by burrowing holes, and are quite active.</p>
+<p>  This solitary bee measures at just around 15mm in length and is one of the earliest bees in the garden each <a href="/gallery/trichrome/spring/">Spring</a>. They are relatively common, and are easily identified by two the two grey, or ashy, bands of colour on their Thorax. They nest in the ground by burrowing holes, and are quite active.</p>
 
 
 <ul class="extra">
