--- a/knowledge/index.html
+++ b/knowledge/index.html
@@ -77,8 +77,8 @@
      <a href="/knowledge/websites/">
       <img src="/img/knowledge/websites/websites.svg" loading="lazy" >
       <div>
-       <h2 style="font-size:30px;font-weight:500;">Websites Wiki</h2>
-       <p>Information on making simple websites from scratch. From the basics to site generation.</p>
+       <h2 style="font-size:30px;font-weight:500;">Web Wiki</h2>
+       <p>Information on web technology, building websites and communicating online.</p>
        <hr>
        </div>
       </a>
