--- a/knowledge/websites/index.html
+++ b/knowledge/websites/index.html
@@ -3,14 +3,14 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>D00k &nbsp;• &nbsp;  Websites Wiki </title>
+    <title>D00k &nbsp;• &nbsp;  Web Wiki </title>
     <link rel="alternate" type="application/rss+xml" href="https://d00k.net/knowledge/websites/index.xml" title="D00k" />
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
     <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/knowledge/websites/websites.svg" />
     <meta property="og:description" 
-  content="Information on making simple websites from scratch. From the basics to site generation." />
+  content="Information on web technology, building websites and communicating online." />
  </head>
 
 
@@ -68,7 +68,7 @@
   </header>
   <main>
 
-   <h1>Websites Wiki</h1>
+   <h1>Web Wiki</h1>
   <article>
    <div class="flex-box">
     <div class="columns-2">
