--- a/projects/pebble/timetwistpop/index.html
+++ b/projects/pebble/timetwistpop/index.html
@@ -124,7 +124,7 @@
 	</li>
 
 	<li>
-	   <a href="https://github.com/D0-0K/time-twist-pop" target="_blank" rel="noreferrer">⬩ Adwaitapod Dark download</a>.
+	   <a href="https://github.com/D0-0K/time-twist-pop" target="_blank" rel="noreferrer">⬩ Github Repository</a>.
 	</li>
 
 
