--- a/journal/index.html
+++ b/journal/index.html
@@ -73,6 +73,14 @@
    <ul>
   
      <li>
+     <a style="font-size:26px;font-weight:500;" href="/journal/inside_themify/">
+      Inside Themify
+     <p style="margin-bottom: 10px;">A technical write-up on the creation of my Themify Rockbox theme.</p>
+     <hr>
+     </a>
+     </li>
+   
+     <li>
      <a style="font-size:26px;font-weight:500;" href="/journal/year-review-2022/">
       Year Review 2022
      <p style="margin-bottom: 10px;">Breaking down 2022, my favourite things and projects completed.</p>
