--- a/projects/ipod/index.html
+++ b/projects/ipod/index.html
@@ -74,6 +74,17 @@
     <div class="columns-2">
    
         <div class="main-box list-box">
+     <a href="/projects/ipod/themify/">
+      <img src="/img/journal/themify_03.png" loading="lazy" >
+      <div>
+       <h2 style="font-size:30px;font-weight:500;">Themify</h2>
+       <p>An advanced, user-customisable theme for Rockbox on iPod Video models.</p>
+       <hr>
+       </div>
+      </a>
+     </div>
+    
+        <div class="main-box list-box">
      <a href="/projects/ipod/adwaitapod/">
       <img src="/img/projects/adwaitapod01.jpg" loading="lazy" >
       <div>
