--- a/projects/index.html
+++ b/projects/index.html
@@ -93,12 +93,12 @@
        </div>
       </a>
      </div>
-        <div class="main-box list-box">
-     <a href="/projects/pebble/rebble_weather/">
-      <img src="/img/projects/rebbleweather04.jpg" loading="lazy">
+       <div class="main-box list-box">
+     <a href="/projects/ipod/themify/">
+      <img src="/img/journal/themify_03.png" loading="lazy">
       <div>
-       <h2 style="font-size:30px;font-weight:500;">Rebble Weather Icons</h2>
-       <p>Reimagining the Pebble weather icons for use in future projects.</p>
+       <h2 style="font-size:30px;font-weight:500;">Themify</h2>
+       <p>An advanced, user-customisable theme for Rockbox on iPod Video models.</p>
        <hr>
        </div>
       </a>
