--- a/journal/index.html
+++ b/journal/index.html
@@ -73,9 +73,17 @@
    <ul>
   
      <li>
+     <a style="font-size:26px;font-weight:500;" href="/journal/one-year-of-dook-net/">
+      Celebrating a Year of d00k.net
+     <p style="margin-bottom: 10px;">After a year of D00k.net, I take a look back at how the site has changed, and what&#39;s to come.</p>
+     <hr>
+     </a>
+     </li>
+   
+     <li>
      <a style="font-size:26px;font-weight:500;" href="/journal/inside_themify/">
-      Inside Themify
-     <p style="margin-bottom: 10px;">A technical write-up on the creation of my Themify Rockbox theme.</p>
+      A Look Inside Themify
+     <p style="margin-bottom: 10px;">A technical dive into the workings of my customisable iPod theme Themify.</p>
      <hr>
      </a>
      </li>
