--- a/about/music/index.html
+++ b/about/music/index.html
@@ -74,9 +74,9 @@
 
 <ul class="extra">
 
-<li>∘ Afro-Harping by Dorothy Ashby.</li>
+<li>∘ Negro-swan by Blood Orange.</li>
 
-<li>∘ Backwater by Kllo.</li>
+<li>∘ Joe Hisaishi's Ponyo soundtrack.</li>
 </ul>
 
 <h2 id="music-notes">Music Notes</h2>
