--- a/about/now/index.html
+++ b/about/now/index.html
@@ -69,15 +69,15 @@
    <main>
     <h1>Now</h1>
      <hr>
-    <h2 id="march-2023">March 2023</h2>
+    <h2 id="april-2023">April 2023</h2>
 
 
 <ul class="extra">
-<li>∘ Working on my new iPod theme, Themify.</li>
+<li>∘ Working on my the adwaitapod re-write.</li>
 
 <li>∘ Writing the second draft of my Rockbox Theming Book.</li>
 
-<li>∘ Learning Python and GTK, making a Dice Rolling app.</li>
+<li>∘ Putting together my final college entry portfolio.</li>
 </ul>
 
 <h2 id="whats-playing">What&rsquo;s Playing?</h2>
@@ -88,7 +88,7 @@
 
 <li>∘ Listening to Valentine by Snail Mail.
 
-<li>∘ Listening to Here Comes the Cowboy by Mac DeMarco.
+<li>∘ Listening to Goosebumps by Boyscott.
 
 </ul>
 
