--- a/about/shortjournal/2022-07-06/index.html
+++ b/about/shortjournal/2022-07-06/index.html
@@ -3,7 +3,7 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>D00k &nbsp;•  2022 07 06 </title>
+    <title>D00k &nbsp;•  Seed Harvesting </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
     <link rel="me" href="https://post.lurk.org/@dook">
@@ -66,7 +66,7 @@
 
   </header>
    <main>
-    <h1>2022 07 06</h1>
+    <h1>Seed Harvesting</h1>
      
      <hr>
     <p>I&rsquo;ve gotten interested this week in propagating seeds from wildflowers in our garden. There&rsquo;s a beautiful pink poppy with massive seed pods, as well as a bunch of bluebells that I&rsquo;d love to spread to other places. I was considering drying and saving the seed, following <a href="https://realseeds.co.uk/seedsavinginfo.html" target="_blank" rel="noopener">this</a> guide from realseeds, however I don&rsquo;t think there&rsquo;s much reason to in this situation.</p>
