--- a/about/shortjournal/2022-07-07/index.html
+++ b/about/shortjournal/2022-07-07/index.html
@@ -3,7 +3,7 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>D00k &nbsp;•  2022 07 07 </title>
+    <title>D00k &nbsp;•  Short Update </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
     <link rel="me" href="https://post.lurk.org/@dook">
@@ -66,7 +66,7 @@
 
   </header>
    <main>
-    <h1>2022 07 07</h1>
+    <h1>Short Update</h1>
      
      <hr>
     <p>Had some really hot weather today, spent most of the day in and out between the garden and my laptop. Started work designing a typeface for pebble watches based on their icon style. Looking to convert it into a watchface soon.</p>
