--- a/about/shortjournal/2022-07-12/index.html
+++ b/about/shortjournal/2022-07-12/index.html
@@ -3,7 +3,7 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>D00k &nbsp;•  2022 07 12 </title>
+    <title>D00k &nbsp;•  Web Detox </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
     <link rel="me" href="https://post.lurk.org/@dook">
@@ -66,7 +66,7 @@
 
   </header>
    <main>
-    <h1>2022 07 12</h1>
+    <h1>Web Detox</h1>
      
      <hr>
     <p>Without even realising it, I went on a bit of an internet detox this weekend. My phone&rsquo;s gone almost 50 hours on a single charge, which is pretty good. I spent most of the weekend between working on some new design projects and watching the wildlife in our garden. It&rsquo;s really become a sanctuary for so many different kinds of species, I even found a threatened leaf-cutter bee building a nest which was amazing to watch. I&rsquo;m somewhat reluctant to return to social media yet, I think I&rsquo;ll keep riding this wave for a while longer.</p>
