--- a/about/shortjournal/2022-07-05/index.html
+++ b/about/shortjournal/2022-07-05/index.html
@@ -3,7 +3,7 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>D00k &nbsp;•  2022 07 05 </title>
+    <title>D00k &nbsp;•  First Post </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
     <link rel="me" href="https://post.lurk.org/@dook">
@@ -66,7 +66,7 @@
 
   </header>
    <main>
-    <h1>2022 07 05</h1>
+    <h1>First Post</h1>
      
      <hr>
     <p>Felt inspired to create a short form journal for the site after seeing some people on Mastodon doing the same. Excited to write more in it, hopefully this will also encourage me to update the site more! :3</p>
