--- a/about/shortjournal/2023-03-31/index.html
+++ b/about/shortjournal/2023-03-31/index.html
@@ -3,11 +3,11 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>D00k &nbsp;•  Autumn Update </title>
+    <title>D00k &nbsp;•  March Update </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
     <link rel="me" href="https://post.lurk.org/@dook">
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="/img/" />
     <meta property="og:description" 
   content="" />
  </head>
@@ -67,9 +67,12 @@
   </header>
   <div class="container">
    <main class="main">
-    <h1>Autumn Update</h1>
-    <p>It&rsquo;s a crazy couple of months for me, but I finally found some time to tend to the website. First thing I did was get to finalising it&rsquo;s design, the way it had been before was overly garish and pretty difficult to look at on some pages, the new style is far better in this regard. I also took the time to go absolutely overboard on optimising every possible thing I could, making each pretty tiny for what it is, I made a writeup on everything I did <a href="https://d00k.net/journal/web-optimisations/" target="_blank" rel="noopener">here</a>.</p>
-<p>I also managed to find a new home on mastodon during this time at Lurk! It&rsquo;s a great community. A few new projects have been started as well; an accessible version of my ipod them after some user feedback, as well as a book for other people looking into making their own themes. Currently everything I&rsquo;m doing is building up for my portfolio to switch colleges with next year, so I&rsquo;m gonna be busy for the the next few months!</p>
+    <h1>March Update</h1>
+    <p>I think this month has been one of my most productive in a really long time! A good chunk of time was spent completing and releasing my latest UI theme for Rockbox, <a href="https://d00k.net/projects/ipod/themify/" target="_blank" rel="noopener">Themify</a>. It&rsquo;s so far been received incredibly well, and has even reached my own goal of using design to convince people to use old devices.</p>
+<p>Once I finished Themify, I set my eyes on the original UI theme I made called <a href="https://d00k.net/projects/ipod/adwaitapod/" target="_blank" rel="noopener">adwaitapod</a>, based on GNOME&rsquo;s design principals. I decided to remake it entirely from scratch, since I&rsquo;d learned so much in the last year that it was just easier to rewrite it all. This time I approached everything much smarter, the new version is about 65% smaller while having new features and performing much better. I just need to focus on some font issues in the github repo, fix a few bugs and work on the dark theme and then I can release it to the world!</p>
+<p>Alongside everything else, I was approached recently to design an original user interface for a project. I&rsquo;ve spent some time creating an icon set, which I plan to open source soon, as well as brainstorming other parts of the interface. I haven&rsquo;t had a chance yet to design on a proper scale like this, so it&rsquo;s been very exciting and interesting having free reign as the sole designer on this part.</p>
+<p>Lastly, my website turned a year old in March! I put together a <a href="https://d00k.net/journal/one-year-of-dook-net/" target="_blank" rel="noopener">blog post</a> where I discussed how the site came to be, as well as the changes it went through during the year. I also took the last paragraph to think about where I want to website to go next, something I hope to work on really soon!</p>
+<p>That&rsquo;s all for now, I have another 2 weeks to cram some projects in before I need to finish my final portfolio for college entry. Once that&rsquo;s done I plan on taking a break for the rest of the month to refresh and get ready for the rest of the year. Till then! - Dook.</p>
 
    </main>
   </div>
