--- a/about/now/index.html
+++ b/about/now/index.html
@@ -69,15 +69,15 @@
    <main>
     <h1>Now</h1>
      <hr>
-    <h2 id="april-2023">April 2023</h2>
+    <h2 id="may-2023">May 2023</h2>
 
 
 <ul class="extra">
-<li>∘ Working on my the adwaitapod re-write.</li>
+<li>∘ Complete adwaitapod 3.0.</li>
+
+<li>∘ Begin site migration to a better SSG.</li>
 
 <li>∘ Writing the second draft of my Rockbox Theming Book.</li>
-
-<li>∘ Putting together my final college entry portfolio.</li>
 </ul>
 
 <h2 id="whats-playing">What&rsquo;s Playing?</h2>
@@ -86,9 +86,9 @@
 <ul class="extra">
 <li>∘ Currently reading 'Busy Doing Nothing' by Devine and Rekka.
 
-<li>∘ Listening to Valentine by Snail Mail.
+<li>∘ Listening to Tango in the Night by Fleetwood Mac.
 
-<li>∘ Listening to Goosebumps by Boyscott.
+<li>∘ Listening to various songs by CASIOPEA.
 
 </ul>
 
