--- a/about/shortjournal/index.html
+++ b/about/shortjournal/index.html
@@ -71,6 +71,20 @@
      <hr>
     
     <article>
+	<h2>2023-04-30 - April Update</h2>
+	<p>What a fast month! It&rsquo;s hard to believe it&rsquo;s already the end of April. I haven&rsquo;t been working on too many projects this month, but the ones I have been working on were pretty important.</p>
+<p>The biggest project this month has been the next update to my iPod UI project: <a href="https://d00k.net/projects/ipod/adwaitapod/" target="_blank" rel="noopener">adwaitapod</a>. This has been a major undertaking, rewriting the entire thing from scratch. But it&rsquo;s been worthwhile. The massive gains made with compression, efficiency and so on have made enough room to add a wide range of new features and still come in smaller than the last version of adwaitapod. I took the chance to take a proper design-orientated approach, rather than simply copying the GNOME desktop design, I used their principles to interpret the user experience of an iPod and make it as user friendly as possible. I&rsquo;m immensely happy with the results so far. The last few things to do involve writing documentation and creating some promo materials, which I&rsquo;ve commissioned a friend to help with. All things going well, adwaitapod 3.0 should be out next month!</p>
+<p>I also completed my first paid work this month! I reached out to <a href="https://thesam.zone/" target="_blank" rel="noopener">Sam</a> on fedi after they made a post looking for a designer to make a logo for their project <a href="https://thesam.zone/blog/beryl-todo/" target="_blank" rel="noopener">Beyrl</a>. I was mostly interested in using it as a chance to gain experience working with a client and designing icons/branding, but we were both very happy with the results! I&rsquo;ll put together a proper page for this project after I deliver the end product.</p>
+<p>A major milestone this month was the submission of my final college portfolio. I&rsquo;m still looking to complete my degree in Design, so hopefully by this September I&rsquo;ll be back in college again.</p>
+<p>Lastly, some small changes and updates to the site this month. The colourscheme was changed slightly to be less yellow, and improve reading contrast. I also updated the Bee Encyclopedia with the newly captured <a href="/knowledge/bees/#early-mining-bee">Early Mining Bee</a>, we&rsquo;re in peak bee season right now so I&rsquo;m hoping to capture some more species that I haven&rsquo;t managed to yet!</p>
+<p>Things have been slowing down (thankfully) but hopefully sometime next month I&rsquo;ll begin my migration over to a better SSG, I also have a few websites to design and build for friends over the summer that I&rsquo;m very much looking forward to! Till next month - Dook.</p>
+
+</article>
+<hr style="width: 25%;">
+
+
+    
+    <article>
 	<h2>2023-03-31 - March Update</h2>
 	<p>I think this month has been one of my most productive in a really long time! A good chunk of time was spent completing and releasing my latest UI theme for Rockbox, <a href="https://d00k.net/projects/ipod/themify/" target="_blank" rel="noopener">Themify</a>. It&rsquo;s so far been received incredibly well, and has even reached my own goal of using design to convince people to use old devices.</p>
 <p>Once I finished Themify, I set my eyes on the original UI theme I made called <a href="https://d00k.net/projects/ipod/adwaitapod/" target="_blank" rel="noopener">adwaitapod</a>, based on GNOME&rsquo;s design principals. I decided to remake it entirely from scratch, since I&rsquo;d learned so much in the last year that it was just easier to rewrite it all. This time I approached everything much smarter, the new version is about 65% smaller while having new features and performing much better. I just need to focus on some font issues in the github repo, fix a few bugs and work on the dark theme and then I can release it to the world!</p>
