--- a/knowledge/bees/index.html
+++ b/knowledge/bees/index.html
@@ -106,7 +106,7 @@
      <hr>
  	</div>
  </figure>
-<p>This solitary bee measures at just around 15mm in length and is one of the earliest bees in the garden each <a href="/gallery/trichrome/spring/">Spring</a>. They are relatively common, and are easily identified by two the two grey, or ashy, bands of colour on their Thorax. They nest in the ground by burrowing holes, and are quite active.</p>
+<p>This solitary bee measures at just around 15mm in length and is one of the earliest bees in the garden each <a href="/gallery/trichrome/spring/">Spring</a>. They are relatively common, and are easily identified by the two grey, or ashy, bands of colour on their Thorax. They nest in the ground by burrowing holes, and are quite active.</p>
 
 
 <ul class="extra">
@@ -241,6 +241,27 @@
 	</li>
 	<li>
 	   <a href="http://eol.org/pages/1177347" target="_blank" rel="noreferrer">⬩ EOL Profile</a>.
+	</li>
+</ul>
+
+<hr>
+<h2 id="early-mining-bee">Early Mining Bee</h2>
+<figure>
+ 	<div>
+     <img src="/img/knowledge/bees09.jpg" loading="lazy" alt="A very small bee on a white flower with an orange-ish back">
+     <figcaption>Andrena (Trachandrena) haemorrhoa - Male</figcaption>
+     <hr>
+ 	</div>
+ </figure>
+<p>Another common mining bee, the Early Mining Bee can be seen from March all the way through to August, quite long for it&rsquo;s kind. These bees are really small, between just 11 and 13mm. Females are strikingly orange, with a distinctive red tip of hairs on their abdomen. Males on the other hand aren&rsquo;t as standout, and generally smaller too. Spotted in the Apple tree blooms in late April.</p>
+
+
+<ul class="extra">
+	<li>
+	   <a href="https://species.biodiversityireland.ie/profile.php?taxonId=55647&amp;keyword=Bees" target="_blank" rel="noreferrer">⬩ Irish Biodiversity Data Centre Profile</a>.
+	</li>
+	<li>
+	   <a href="https://eol.org/pages/2747408" target="_blank" rel="noreferrer">⬩ EOL Profile</a>.
 	</li>
 </ul>
 
