add rockbox images plus more

--- a/about/index.html
+++ b/about/index.html
@@ -69,8 +69,8 @@
    <main>
     <h1>About Me</h1>
      <hr>
-    <p>D00k.net is my personal playground for design, photography and knowledge. It serves as a digital record of a journey of learning, about computers, about the world and everything in-between!</p>
-<p>My name is Evan, however I go by Dook online. I spend a lot of time developing my photography techniques and capturing places in an interesting light. I love the smol web and computing, as well as rejuvenating old hardware with new design. Currently, I am studying Product Design and teaching myself sustainability, permaculture and programming in the background.</p>
+    <p>D00k.net is my personal playground on the web. It&rsquo;s a record of art, work and learning that is constantly evolving over time. Built around a philosophy that good design on the web doesn&rsquo;t need to be bottleneck.</p>
+<p>My name is Evan, however I go by Dook online. I&rsquo;m a designer who is constantly pushing themselves to learn new things. While I currently study Product Design, in my personal time I teach myself programming, sustainability and much more. I love music, and am always seeking for something new to listen to.</p>
 <figure>
  	<div>
      <img src="/img/about/about.gif" loading="lazy" alt="Gif of surrealist images of evan">
