--- a/about/music/index.html
+++ b/about/music/index.html
@@ -74,9 +74,9 @@
 
 <ul class="extra">
 
-<li>∘ Negro-swan by Blood Orange.</li>
+<li>∘ Fusion Jazz from CASIOPEA.</li>
 
-<li>∘ Joe Hisaishi's Ponyo soundtrack.</li>
+<li>∘ More Fleetwood Mac as always.</li>
 </ul>
 
 <h2 id="music-notes">Music Notes</h2>
