--- a/knowledge/ipod_modding/index.html
+++ b/knowledge/ipod_modding/index.html
@@ -85,6 +85,17 @@
      </div>
     
         <div class="main-box list-box">
+     <a href="/knowledge/ipod_modding/rockbox_image_optimisation/">
+      <img src="/img/knowledge/linux/imagemagick.svg" loading="lazy" >
+      <div>
+       <h2 style="font-size:30px;font-weight:500;">Rockbox Image Optimisation</h2>
+       <p>Information on the image formats of Rockbox Theming and how to optimise them best.</p>
+       <hr>
+       </div>
+      </a>
+     </div>
+    
+        <div class="main-box list-box">
      <a href="/knowledge/ipod_modding/font_combining/">
       <img src="/img/knowledge/ipod_modding/fonts01.svg" loading="lazy" >
       <div>
