add compacticons page

--- a/design/index.html
+++ b/design/index.html
@@ -27,7 +27,15 @@
 </ul>
 </details></div>
 
-<h2 id="2023">2023</h2><a href="adwaitapod" class="clickbox box clickimg" >
+<h2 id="2023">2023</h2><a href="compacticons" class="clickbox box clickimg" >
+
+<picture>
+<source srcset="/img/design/compacticons_highlight.svg" media="(max-width:716px)">
+<img src="/img/design/compacticons.svg" alt="symbols on a gray background">
+</picture>
+
+<div class="clickdiv"><h3 id="compacticons">compacticons</h3><p>An ultra compact symbolic icon set designed for use in both low resolution and high resolution displays.</div></a>
+<a href="adwaitapod" class="clickbox box clickimg" >
 
 <picture>
 <source srcset="/img/design/adwaitapodimg.jpg" media="(max-width:716px)">
